--- a/quiz.html
+++ b/quiz.html
@@ -75,7 +75,7 @@ const stageData=[
 <body>
 
 <div id="first-confirm" >
-  <span class="first-confirm-title">AI脳トレへようこそ ver3</span>
+  <span class="first-confirm-title">AI脳トレへようこそ ver4</span>
   <img class="first-confirm-image" src="images/image.png" />
   <div class="sentence">
     このアプリはあなたの回答をもとに<br>
@@ -1371,11 +1371,16 @@ function showCountdown(){
         }else{
           //BGMスピードを変更
           //bgm.playbackRate = 0.9 + 0.1 * nowStage.stage;
-          bgm.playbackRate = 0.5 + 0.3 * nowStage.stage;
 
           if(nowStage.stage==1){
-            playSound('bgm');
+            //playSound('bgm');
+            bgm.value = 1.0;
           }
+
+          bgm.pause();
+          bgm.playbackRate = 0.9 + 0.1 * nowStage.stage;
+          bgm.play();
+
         }
 
         showQuestion();
