--- a/quiz.html
+++ b/quiz.html
@@ -76,7 +76,7 @@ const stageData=[
 <body>
 
 <div id="first-confirm" >
-  <span class="first-confirm-title">AI脳トレへようこそ ver17:47</span>
+  <span class="first-confirm-title">AI脳トレへようこそ ver17:55</span>
   <img class="first-confirm-image" src="images/image.png" />
   <div class="sentence">
     このアプリはあなたの回答をもとに<br>
@@ -408,7 +408,11 @@ function showQuestion(){
   rendaCount = 0;
   
   if(q.mode=='renda'){
-    questionBox.innerHTML=q.question + (q.image?`<br><img src="${q.image}" class="quiz-img">`:"");
+    var rendaImg = q.image;
+    if(q.beforeImg != ''){
+      rendaImg = q.beforeImg;
+    }
+    questionBox.innerHTML=q.question + (q.image?`<br><img src="${rendaImg}" class="quiz-img">`:"");
     hideTimer();
     buttonsDiv.innerHTML="";
     buttonsDiv.className = 'buttons';
@@ -1412,6 +1416,7 @@ var bgm;
 var bgm2;
 var bgm3;
 var bgm4;
+var nowBgm;
 var bgm_michiyo; // = document.getElementById('bgm_michiyo');
 var se_count; // = document.getElementById('se_count');
 var se_lvup; // = document.getElementById('se_lvup');
@@ -1468,16 +1473,16 @@ function playBGM(stage){
 
   var target;
   switch (stage) {
-  case 1:
+  case "1":
     target = bgm;
     break;
-  case 2:
+  case "2":
     target = bgm2;
     break;
-  case 3:
+  case "3":
     target = bgm3;
     break;
-  case 4:
+  case "4":
     target = bgm4;
     break;
   }
@@ -1489,7 +1494,14 @@ function playBGM(stage){
   */
   target.playbackRate = 0.9 + 0.1 * stage;
   target.volume = 1.0;
+
+  if(stage > 1){
+    nowBgm.pause();
+    nowBgm.src = "";
+  }
   target.play();
+
+  nowBgm = target;
 }
 
 function playSound(name, vol = 1.0){
