--- a/quiz.html
+++ b/quiz.html
@@ -49,6 +49,7 @@ const quizData=[
   {"stage":"4","mode":"","quiztype":"記憶力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"最終回「□□□陽はまた昇る」","image":"images/triton.png","music":"","image2":"","image2time":"","options":[{"text":"images/triton_a.png"},{"text":"images/triton_b.png"},{"text":"images/triton_c.png"},{"text":""}],"correct":"images/triton_a.png","answerPict":"","rand":true,"answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
   {"stage":"5","mode":"","quiztype":"形状判断力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"若いのは？","image":"","music":"","image2":"","image2time":"","options":[{"text":"images/kaeru.png"},{"text":"images/penguin.png"},{"text":""},{"text":""}],"correct":"images/penguin.png","answerPict":"","rand":true,"answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
   {"stage":"5","mode":"","quiztype":"形状判断力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"一番若いのは？","image":"images/trainers1.png","music":"","image2":"images/trainers2.png","image2time":"5000","options":[{"text":"A"},{"text":"B"},{"text":"C"},{"text":"D"}],"correct":"A","answerPict":"","rand":false,"answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
+  {"stage":"5","mode":"","quiztype":"記憶力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"誰？","image":"images/naomasa.png","music":"","image2":"","image2time":"","options":[{"text":"直正"},{"text":"直弘"},{"text":"直大"},{"text":"直虎"}],"correct":"直正","answerPict":"","rand":true,"answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
   {"stage":"5","mode":"","quiztype":"空間認識力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"電車の進行方向は？","image":"images/ookubo.png","music":"","image2":"","image2time":"","options":[{"text":"手前"},{"text":"奥"},{"text":""},{"text":""}],"correct":"手前","answerPict":"","rand":false,"answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
   {"stage":"5","mode":"","quiztype":"記憶力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"電車の進行方向は？","image":"images/soubu.png","music":"","image2":"","image2time":"","options":[{"text":"中野"},{"text":"三鷹"},{"text":"千葉"},{"text":"津田沼"}],"correct":"中野","answerPict":"","rand":true,"answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
   {"stage":"5","mode":"kioku","quiztype":"記憶力","beforeTxt":"画像を覚えて！","beforeImg":"images/picos.png","beforeMusic":"","beforeTime":"4000","question":"野鳥の数は？","image":"","music":"","image2":"","image2time":"","options":[{"text":"0"},{"text":"3"},{"text":"5"},{"text":"7"}],"correct":"0","answerPict":"images/picocomment.png","rand":false,"answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
@@ -1284,8 +1285,8 @@ function init(){
 
   bgm_michiyo.addEventListener("timeupdate", () => {
     //★アウトロループ　TODO
-    if (bgm_michiyo.currentTime >= 119.0) {
-      bgm_michiyo.currentTime = 103.8;
+    if (audio.currentTime >= 119) {
+      audio.currentTime = 103.2;
     }
   });
 
