--- a/quiz.html
+++ b/quiz.html
@@ -1285,8 +1285,8 @@ function init(){
 
   bgm_michiyo.addEventListener("timeupdate", () => {
     //★アウトロループ　TODO
-    if (audio.currentTime >= 119) {
-      audio.currentTime = 103.2;
+    if (bgm_michiyo.currentTime >= 119) {
+      bgm_michiyo.currentTime = 103.2;
     }
   });
 
