--- a/quiz.html
+++ b/quiz.html
@@ -697,7 +697,7 @@ function handleAnswer(selected){
 
   if(isCorrect){
     playSound('seikai');
-    playSound('point', 0.5);
+    //playSound('point', 0.5);
   }else{
     playSound('huseikai');
   }
@@ -789,7 +789,7 @@ function rendaResult(){
 
     if(cutinTitle != "BAD"){
       playSound('seikai');
-      playSound('point', 0.5);
+      //playSound('point', 0.5);
     }else{
       playSound('huseikai');
     }
